Initial modularization complete